incorrect-emit: Fix false-positives with inline method definitions

When the methods were defined inside the class it could happen
that we were checking a method call before we had gathered
all access specifiers.

The solution is to visit all access specifiers as soon as we
visit the class.

Tests pass now too.

BUG: 373947